--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,38 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.form-wrapper {
+  width: fit-content;
+  padding: 15px;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+
+  background-color: lightgray;
+
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+.timer {
+  display: flex;
+  gap: 10px;
+  
+}
+
+.field {
+  text-align: center;
+}
+
+.value {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.value, .label {
+  display: block;
+}
